enable building & testing with JDK17